--- a/_posts/2024-10-04-감자라면 copy.md
+++ b/_posts/2024-10-04-감자라면 copy.md
@@ -58,15 +58,14 @@
 
 <div id="adContainer">
     <h2>광고</h2>
-    <ins class="adsbygoogle"
-         style="display:block; margin: auto;"
-         data-ad-client="ca-pub-9374368296307755"
-         data-ad-slot="9952845435"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    <div id="adContent">
+        <ins class="adsbygoogle"
+             style="display:block; margin: auto;"
+             data-ad-client="ca-pub-9374368296307755"
+             data-ad-slot="9952845435"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+    </div>
     <button id="closeAdButton" onclick="closeAd()">닫기</button>
 </div>
 
@@ -76,6 +75,9 @@
     function showAd() {
         document.getElementById('overlay').style.display = 'block';
         document.getElementById('adContainer').style.display = 'block';
+
+        // 광고를 동적으로 다시 로드
+        (adsbygoogle = window.adsbygoogle || []).push({});
 
         // 5초 카운터 후 닫기 버튼 활성화
         setTimeout(function() {
