--- a/_posts/2024-10-04-감자라면 copy 2.md
+++ b/_posts/2024-10-04-감자라면 copy 2.md
@@ -32,26 +32,22 @@
             border-radius: 10px;
             z-index: 1000;
             text-align: center;
-        }        
+        }
 
-        
-
-        /* 광고 팝업 스타일 */
         #adContainer {
             display: none;
             position: fixed;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 90%; /* 모바일 화면에 맞게 90% */
-            height: 60%; /* 모바일 화면에 맞게 60% */
+            width: 80%; /* 화면 너비의 80% */
+            max-width: 400px; /* 최대 너비 */
             background-color: #fff;
-            z-index: 1000;
-            overflow: hidden;
+            z-index: 1001;
+            padding: 20px;
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
             text-align: center;
-            padding: 20px;
         }
 
         #closeAdButton {
@@ -63,7 +59,6 @@
             color: white;
             border-radius: 5px;
             cursor: pointer;
-            z-index: 1001;
         }
 
         #closeAdButton:hover {
@@ -73,20 +68,7 @@
 </head>
 <body>
 
-<div id="overlay" onclick="closeAd()"></div>
-
-<div id="adContainer">
-    <h2>광고</h2>
-    <div id="adContent">
-        <ins class="adsbygoogle"
-             style="display:block; margin: auto;"
-             data-ad-client="ca-pub-9374368296307755"
-             data-ad-slot="9952845435"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-    </div>
-    <button id="closeAdButton" onclick="closeAd()">닫기</button>
-</div>
+<div id="overlay" onclick="closePopup()"></div>
 
 <div id="popup">
     <h2>friendwoo.com에 오신 것을 환영합니다</h2>
