--- a/_posts/2024-10-04-감자라면 copy.md
+++ b/_posts/2024-10-04-감자라면 copy.md
@@ -17,25 +17,6 @@
             z-index: 999;
         }
 
-        /* 팝업 스타일 */
-        #popup {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 80%; /* 화면 너비의 80% */
-            max-width: 400px; /* 최대 너비 */
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            z-index: 1000;
-            text-align: center;
-        }        
-
-        
-
         /* 광고 팝업 스타일 */
         #adContainer {
             display: none;
@@ -88,26 +69,14 @@
     <button id="closeAdButton" onclick="closeAd()">닫기</button>
 </div>
 
-<div id="popup">
-    <h2>friendwoo.com에 오신 것을 환영합니다</h2>
-    <p>더 많은 콘텐츠를 보려면 아래 버튼을 클릭해 광고를 시청하세요.</p>
-    <button onclick="showAd()">광고 보기</button>
-</div>
+<button onclick="showAd()">광고 보기</button>
 
 <script>
     function showAd() {
         document.getElementById('overlay').style.display = 'block';
         document.getElementById('adContainer').style.display = 'block';
 
-        // 광고를 동적으로 다시 로드하기 위해 광고 컨테이너를 업데이트
-        document.getElementById('adContent').innerHTML = `
-            <ins class="adsbygoogle"
-                 style="display:block; margin: auto;"
-                 data-ad-client="ca-pub-9374368296307755"
-                 data-ad-slot="9952845435"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-        `;
+        // 광고를 동적으로 다시 로드
         (adsbygoogle = window.adsbygoogle || []).push({});
 
         // 5초 카운터 후 닫기 버튼 활성화
