--- a/_posts/2024-10-04-감자라면 copy 2.md
+++ b/_posts/2024-10-04-감자라면 copy 2.md
@@ -66,20 +66,7 @@
 </head>
 <body>
 
-<div id="overlay" onclick="closeAd()"></div>
-
-<div id="adContainer">
-    <h2>광고</h2>
-    <div id="adContent">
-        <ins class="adsbygoogle"
-             style="display:block; margin: auto;"
-             data-ad-client="ca-pub-9374368296307755"
-             data-ad-slot="9952845435"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-    </div>
-    <button id="closeAdButton" onclick="closeAd()">닫기</button>
-</div>
+<div id="overlay" onclick="closePopup()"></div>
 
 <div id="popup">
     <h2>friendwoo.com에 오신 것을 환영합니다</h2>
@@ -87,22 +74,39 @@
     <button onclick="showAd()">광고 보기</button>
 </div>
 
+<div id="adContainer">
+    <h2>광고</h2>
+    <ins class="adsbygoogle"
+         style="display:block; margin: auto;"
+         data-ad-client="ca-pub-9374368296307755"
+         data-ad-slot="9952845435"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <button id="closeAdButton" onclick="closeAd()">닫기</button>
+</div>
+
 <script>
-    function showAd() {
+    window.onload = function() {
+        showPopup();
+    };
+
+    function showPopup() {
         document.getElementById('overlay').style.display = 'block';
-        document.getElementById('adContainer').style.display = 'block';
+        document.getElementById('popup').style.display = 'block';
+    }
 
-        // 광고를 동적으로 다시 로드하기 위해 광고 컨테이너를 업데이트
-        document.getElementById('adContent').innerHTML = `
-            <ins class="adsbygoogle"
-                 style="display:block; margin: auto;"
-                 data-ad-client="ca-pub-9374368296307755"
-                 data-ad-slot="9952845435"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-        `;
+    function closePopup() {
+        document.getElementById('overlay').style.display = 'none';
+        document.getElementById('popup').style.display = 'none';
+    }
+
+    function showAd() {
+        closePopup(); // 팝업을 닫음
+        document.getElementById('adContainer').style.display = 'block'; // 광고 컨테이너 표시
+
+        // 광고 송출 코드 실행
         (adsbygoogle = window.adsbygoogle || []).push({});
-
+        
         // 5초 카운터 후 닫기 버튼 활성화
         setTimeout(function() {
             document.getElementById('closeAdButton').style.display = 'inline-block';
@@ -110,9 +114,8 @@
     }
 
     function closeAd() {
-        document.getElementById('overlay').style.display = 'none';
-        document.getElementById('adContainer').style.display = 'none';
-        document.getElementById('closeAdButton').style.display = 'none';
+        document.getElementById('adContainer').style.display = 'none'; // 광고 컨테이너 숨김
+        alert('광고 시청이 완료되었습니다.');
     }
 </script>
 
