--- a/_posts/2024-10-04-감자라면 copy 2.md
+++ b/_posts/2024-10-04-감자라면 copy 2.md
@@ -1,4 +1,93 @@
-<!DOCTYPE html>
+---
+layout: default
+---
+
+{% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
+  {% include page__hero.html %}
+{% elsif page.header.video.id and page.header.video.provider %}
+  {% include page__hero_video.html %}
+{% endif %}
+
+{% assign breadcrumbs_enabled = site.breadcrumbs %}
+{% if page.breadcrumbs != null %}
+  {% assign breadcrumbs_enabled = page.breadcrumbs %}
+{% endif %}
+{% if page.url != "/" and breadcrumbs_enabled %}
+  {% unless paginator %}
+    {% include breadcrumbs.html %}
+  {% endunless %}
+{% endif %}
+
+<div id="main" role="main">
+  {% include sidebar.html %}
+
+  <article class="page" itemscope itemtype="https://schema.org/CreativeWork"{% if page.locale %} lang="{{ page.locale }}"{% endif %}>
+    {% if page.title %}<meta itemprop="headline" content="{{ page.title | replace: '|', '&#124;' | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
+    {% if page.excerpt %}<meta itemprop="description" content="{{ page.excerpt | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
+    {% if page.date %}<meta itemprop="datePublished" content="{{ page.date | date_to_xmlschema }}">{% endif %}
+    {% if page.last_modified_at %}<meta itemprop="dateModified" content="{{ page.last_modified_at | date_to_xmlschema }}">{% endif %}
+
+    <div class="page__inner-wrap">
+      {% unless page.header.overlay_color or page.header.overlay_image %}
+        <header>
+          {% if page.title -%}
+          <h1 id="page-title" class="page__title" itemprop="headline">
+            <a href="{{ page.url | absolute_url }}" itemprop="url">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</a>
+          </h1>
+          {%- endif %}
+          {% include page__meta.html %}
+        </header>
+      {% endunless %}
+
+      <section class="page__content" itemprop="text">
+        {% if page.toc %}
+          <aside class="sidebar__right {% if page.toc_sticky %}sticky{% endif %}">
+            <nav class="toc">
+              <header><h4 class="nav__title"><i class="fas fa-{{ page.toc_icon | default: 'file-alt' }}"></i> {{ page.toc_label | default: site.data.ui-text[site.locale].toc_label | default: "On this page" }}</h4></header>
+              {% include toc.html sanitize=true html=content h_min=1 h_max=6 class="toc__menu" skip_no_ids=true %}
+            </nav>
+          </aside>
+        {% endif %}
+        {{ content }}
+        <!-- 본문에 광고 삽입 -->
+        <div class="in-content-ad">
+            <ins class="adsbygoogle"
+                 style="display:block; margin: auto; text-align: center; padding: 20px 0;"
+                 data-ad-client="ca-pub-9374368296307755"
+                 data-ad-slot="9952845435"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+        {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
+      </section>
+
+      <footer class="page__meta">
+        {% if site.data.ui-text[site.locale].meta_label %}
+          <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
+        {% endif %}
+        {% include page__taxonomy.html %}
+        {% include page__date.html %}
+      </footer>
+
+      {% if page.share %}{% include social-share.html %}{% endif %}
+      {% include post_pagination.html %}
+    </div>
+
+    {% if jekyll.environment == 'production' and site.comments.provider and page.comments %}
+      {% include comments.html %}
+    {% endif %}
+  </article>
+
+  {% if page.id and page.related and site.related_posts.size > 0 %}
+    {% include page__related.html posts=site.related_posts %}
+  {% elsif page.id and page.related %}
+    {% include page__related.html posts=site.posts %}
+  {% endif %}
+</div>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -48,6 +137,27 @@
             padding-top: 50px;
         }
 
+        .ad-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+            background-color: #f1f1f1;
+            border-bottom: 1px solid #ddd;
+        }
+
+        .ad-header span {
+            font-size: 14px;
+        }
+
+        .close-btn {
+            cursor: pointer;
+            font-size: 18px;
+            font-weight: bold;
+            background: none;
+            border: none;
+        }
+
         #closeAdButton {
             display: none;
             margin-top: 20px;
@@ -69,12 +179,16 @@
 <div id="overlay" onclick="closePopup()"></div>
 
 <div id="popup">
-    <h2>friendwoo.com에 오신 것을 환영합니다</h2>
+    <h2>kkdamoa에 오신 것을 환영합니다</h2>
     <p>더 많은 콘텐츠를 보려면 아래 버튼을 클릭해 광고를 시청하세요.</p>
     <button onclick="showAd()">광고 보기</button>
 </div>
 
 <div id="adContainer">
+    <div class="ad-header">
+        <span id="adCounter">광고가 7초 후에 닫힐 수 있습니다...</span>
+        <button class="close-btn" onclick="closeAd()">&times;</button>
+    </div>
     <h2>광고</h2>
     <ins class="adsbygoogle"
          style="display:block; margin: auto;"
@@ -82,7 +196,6 @@
          data-ad-slot="9952845435"
          data-ad-format="auto"
          data-full-width-responsive="true"></ins>
-    <button id="closeAdButton" onclick="closeAd()">닫기</button>
 </div>
 
 <script>
@@ -93,28 +206,39 @@
     function showPopup() {
         document.getElementById('overlay').style.display = 'block';
         document.getElementById('popup').style.display = 'block';
+        document.body.style.overflow = 'hidden'; // 스크롤 비활성화
     }
 
     function closePopup() {
         document.getElementById('overlay').style.display = 'none';
         document.getElementById('popup').style.display = 'none';
+        document.body.style.overflow = ''; // 스크롤 활성화
     }
 
     function showAd() {
         closePopup(); // 팝업을 닫음
         document.getElementById('adContainer').style.display = 'block'; // 광고 컨테이너 표시
+        document.body.style.overflow = 'hidden'; // 스크롤 비활성화
 
         // 광고 송출 코드 실행
         (adsbygoogle = window.adsbygoogle || []).push({});
-        
-        // 5초 카운터 후 닫기 버튼 활성화
-        setTimeout(function() {
-            document.getElementById('closeAdButton').style.display = 'inline-block';
-        }, 5000);
+
+        // 7초 카운터 후 닫기 버튼 활성화
+        let counter = 7;
+        let adCounter = document.getElementById('adCounter');
+        let countdown = setInterval(function() {
+            counter--;
+            adCounter.textContent = `광고가 ${counter}초 후에 닫힐 수 있습니다...`;
+            if (counter <= 0) {
+                clearInterval(countdown);
+                adCounter.textContent = "광고를 닫을 수 있습니다.";
+            }
+        }, 1000);
     }
 
     function closeAd() {
         document.getElementById('adContainer').style.display = 'none'; // 광고 컨테이너 숨김
+        document.body.style.overflow = ''; // 스크롤 활성화
         alert('광고 시청이 완료되었습니다.');
     }
 </script>
