--- a/_posts/2024-10-04-광고숭2.md
+++ b/_posts/2024-10-04-광고숭2.md
@@ -185,45 +185,58 @@ layout: default
 </div>
 
 <div id="adContainer">
-    <div class="ad-header">
-        <span id="adCounter">광고가 7초 후에 닫힐 수 있습니다...</span>
-        <button class="close-btn" onclick="closeAd()">&times;</button>
-    </div>
-    <h2>광고</h2>
-    <ins class="adsbygoogle"
-         style="display:block; margin: auto;"
-         data-ad-client="ca-pub-9374368296307755"
-         data-ad-slot="9952845435"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
+  <div class="ad-content">
+      <div class="ad-counter">
+          <span id="adCounter">광고가 7초 후에 닫힐 수 있습니다...</span>
+          <button id="closeAdButton" style="display:none;" onclick="closeAd()">닫기</button>
+      </div>
+      <!-- 광고 영역 -->
+      <ins class="adsbygoogle"
+           style="display:block; margin: auto;"
+           data-ad-client="ca-pub-9374368296307755"
+           data-ad-slot="9952845435"
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+  </div>
 </div>
+
 
 <script>
     window.onload = function() {
-        showPopup();
+        let today = new Date().toDateString();
+        let popupCount = localStorage.getItem('popupCount') || 0;
+        let lastDate = localStorage.getItem('lastDate');
+
+        if (lastDate !== today) {
+            localStorage.setItem('popupCount', 0);
+            localStorage.setItem('lastDate', today);
+        }
+
+        if (popupCount < 2) {
+            showPopup();
+            localStorage.setItem('popupCount', ++popupCount);
+        }
     };
 
     function showPopup() {
         document.getElementById('overlay').style.display = 'block';
         document.getElementById('popup').style.display = 'block';
-        document.body.style.overflow = 'hidden'; // 스크롤 비활성화
+        document.body.style.overflow = 'hidden';
     }
 
     function closePopup() {
         document.getElementById('overlay').style.display = 'none';
         document.getElementById('popup').style.display = 'none';
-        document.body.style.overflow = ''; // 스크롤 활성화
+        document.body.style.overflow = '';
     }
 
     function showAd() {
-        closePopup(); // 팝업을 닫음
-        document.getElementById('adContainer').style.display = 'block'; // 광고 컨테이너 표시
-        document.body.style.overflow = 'hidden'; // 스크롤 비활성화
+        closePopup();
+        document.getElementById('adContainer').style.display = 'block';
+        document.body.style.overflow = 'hidden';
 
-        // 광고 송출 코드 실행
         (adsbygoogle = window.adsbygoogle || []).push({});
 
-        // 7초 카운터 후 닫기 버튼 활성화
         let counter = 7;
         let adCounter = document.getElementById('adCounter');
         let countdown = setInterval(function() {
@@ -232,18 +245,18 @@ layout: default
             if (counter <= 0) {
                 clearInterval(countdown);
                 adCounter.textContent = "광고를 닫을 수 있습니다.";
+                document.getElementById('closeAdButton').style.display = 'block';
             }
         }, 1000);
     }
 
     function closeAd() {
-        document.getElementById('adContainer').style.display = 'none'; // 광고 컨테이너 숨김
-        document.body.style.overflow = ''; // 스크롤 활성화
+        document.getElementById('adContainer').style.display = 'none';
+        document.body.style.overflow = '';
         alert('광고 시청이 완료되었습니다.');
     }
 </script>
 
-<!-- 광고 스크립트 -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
      crossorigin="anonymous"></script>
 
