--- a/_posts/2024-10-04-광고숭2.md
+++ b/_posts/2024-10-04-광고숭2.md
@@ -185,21 +185,18 @@ layout: default
 </div>
 
 <div id="adContainer">
-  <div class="ad-content">
-      <div class="ad-counter">
-          <span id="adCounter">광고가 7초 후에 닫힐 수 있습니다...</span>
-          <button id="closeAdButton" style="display:none;" onclick="closeAd()">닫기</button>
-      </div>
-      <!-- 광고 영역 -->
-      <ins class="adsbygoogle"
-           style="display:block; margin: auto;"
-           data-ad-client="ca-pub-9374368296307755"
-           data-ad-slot="9952845435"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-  </div>
+    <div class="ad-header">
+        <span id="adCounter">광고가 7초 후에 닫힐 수 있습니다...</span>
+        <button class="close-btn" onclick="closeAd()">&times;</button>
+    </div>
+    <h2>광고</h2>
+    <ins class="adsbygoogle"
+         style="display:block; margin: auto;"
+         data-ad-client="ca-pub-9374368296307755"
+         data-ad-slot="9952845435"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
 </div>
-
 
 <script>
     window.onload = function() {
