--- a/_posts/2024-10-04-광고 카운터 x.md
+++ b/_posts/2024-10-04-광고 카운터 x.md
@@ -49,7 +49,18 @@ layout: default
           </aside>
         {% endif %}
         {{ content }}
-
+        <!-- 본문에 광고 삽입 -->
+        <div class="in-content-ad">
+            <ins class="adsbygoogle"
+                 style="display:block; margin: auto; text-align: center; padding: 20px 0;"
+                 data-ad-client="ca-pub-9374368296307755"
+                 data-ad-slot="9952845435"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
@@ -164,41 +175,6 @@ layout: default
     </style>
 </head>
 <body>
-    <!-- 본문 하단에 고정된 앵커 광고 -->
-    <div class="anchor-ad">
-      <ins class="adsbygoogle"
-           style="display:block; width: 100%; height: 50px; margin: auto; text-align: center;"
-           data-ad-client="ca-pub-9374368296307755"
-           data-ad-slot="9952845435"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-  </div>
-
-  <style>
-      .anchor-ad {
-          position: fixed;
-          bottom: 0;
-          left: 0;
-          width: 100%;
-          background-color: #fff;
-          z-index: 1002; /* 다른 요소 위에 표시 */
-          box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-          padding: 5px 0;
-      }
-
-      /* 필요 시 화면 높이를 광고 높이만큼 조정 */
-      body {
-          padding-bottom: 60px; /* 광고 높이만큼 본문 하단 여백 추가 */
-      }
-  </style>
-
-  <!-- 기존의 본문 내용 -->
-  <div id="main" role="main">
-      <!-- 콘텐츠 영역 -->
-  </div>
 
 <div id="overlay" onclick="closePopup()"></div>
 
