--- a/_posts/2024-10-04-광고 카운터 x.md
+++ b/_posts/2024-10-04-광고 카운터 x.md
@@ -49,18 +49,7 @@ layout: default
           </aside>
         {% endif %}
         {{ content }}
-        <!-- 본문에 광고 삽입 -->
-        <div class="in-content-ad">
-            <ins class="adsbygoogle"
-                 style="display:block; margin: auto; text-align: center; padding: 20px 0;"
-                 data-ad-client="ca-pub-9374368296307755"
-                 data-ad-slot="9952845435"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-        </div>
+
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
@@ -87,6 +76,62 @@ layout: default
     {% include page__related.html posts=site.posts %}
   {% endif %}
 </div>
+
+<!-- 하단 고정 광고 영역 -->
+<div id="fixedAd">
+    <ins class="adsbygoogle"
+         style="display:block; width:100%;"
+         data-ad-client="ca-pub-9374368296307755"
+         data-ad-slot="9952845435"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <button id="closeFixedAd" onclick="closeFixedAd()">X</button>
+</div>
+
+<script>
+    // 스크롤 시 하단 고정 광고 표시
+    window.onscroll = function() {
+        let fixedAd = document.getElementById('fixedAd');
+        if (window.pageYOffset > 200) { // 스크롤 위치 조정 가능
+            fixedAd.style.display = 'block';
+        } else {
+            fixedAd.style.display = 'none';
+        }
+    };
+
+    function closeFixedAd() {
+        document.getElementById('fixedAd').style.display = 'none';
+    }
+
+    // 광고 스크립트 실행
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+<style>
+    #fixedAd {
+        display: none;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background-color: #fff;
+        z-index: 1000;
+        box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+        text-align: center;
+        padding: 10px;
+    }
+
+    #closeFixedAd {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        background: none;
+        border: none;
+        font-size: 18px;
+        cursor: pointer;
+    }
+</style>
+
 
 <html lang="en">
 <head>
