--- a/_posts/2024-10-04-상단광고.md
+++ b/_posts/2024-10-04-상단광고.md
@@ -1,4 +1,3 @@
-@ -1,306 +1,346 @@
 ---
 layout: default
 ---
@@ -31,6 +30,18 @@ layout: default
     <div class="page__inner-wrap">
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
+          <!-- 제목 상단에 광고 삽입 (크기 축소) -->
+          <div class="in-content-ad">
+              <ins class="adsbygoogle"
+                   style="display:block; margin: auto; width: 80%; text-align: center; padding: 10px 0;"
+                   data-ad-client="ca-pub-9374368296307755"
+                   data-ad-slot="9952845435"
+                   data-ad-format="auto"
+                   data-full-width-responsive="true"></ins>
+              <script>
+                  (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
+          </div>
           {% if page.title -%}
           <h1 id="page-title" class="page__title" itemprop="headline">
             <a href="{{ page.url | absolute_url }}" itemprop="url">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</a>
@@ -50,7 +61,7 @@ layout: default
           </aside>
         {% endif %}
         {{ content }}
-
+        
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
@@ -78,7 +89,9 @@ layout: default
   {% endif %}
 </div>
 
-<!DOCTYPE html>
+
+
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -104,8 +117,8 @@ layout: default
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 80%;
-            max-width: 400px;
+            width: 80%; /* 화면 너비의 80% */
+            max-width: 400px; /* 최대 너비 */
             background-color: #fff;
             padding: 20px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -114,7 +127,6 @@ layout: default
             text-align: center;
         }
 
-        /* 광고 컨테이너 스타일 */
         #adContainer {
             display: none;
             position: fixed;
@@ -129,23 +141,6 @@ layout: default
             padding-top: 50px;
         }
 
-        /* 하단 앵커 광고 스타일 */
-        .anchor-ad {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 10px;
-            background-color: #fff;
-            z-index: 1002;
-            box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        /* 필요 시 화면 높이를 광고 높이만큼 조정 */
-        body {
-            padding-bottom: 15px;
-        }
-
         .ad-header {
             display: flex;
             justify-content: space-between;
@@ -153,6 +148,10 @@ layout: default
             padding: 10px;
             background-color: #f1f1f1;
             border-bottom: 1px solid #ddd;
+        }
+
+        .ad-header span {
+            font-size: 14px;
         }
 
         .close-btn {
@@ -203,19 +202,6 @@ layout: default
          data-full-width-responsive="true"></ins>
 </div>
 
-<!-- 하단에 고정된 앵커 광고 -->
-<div class="anchor-ad">
-    <ins class="adsbygoogle"
-         style="display:block; width: 100%; height: 10px; margin: auto; text-align: center;"
-         data-ad-client="ca-pub-9374368296307755"
-         data-ad-slot="9952845435"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-</div>
-
 <script>
   window.onload = function() {
       if (!shouldShowPopup()) return;
@@ -225,26 +211,28 @@ layout: default
   function showPopup() {
       document.getElementById('overlay').style.display = 'block';
       document.getElementById('popup').style.display = 'block';
-      document.body.style.overflow = 'hidden';
+      document.body.style.overflow = 'hidden'; // 스크롤 비활성화
   }
 
   function closePopup() {
       document.getElementById('overlay').style.display = 'none';
       document.getElementById('popup').style.display = 'none';
-      document.body.style.overflow = '';
+      document.body.style.overflow = ''; // 스크롤 활성화
   }
 
   function showAd() {
-      closePopup();
-      document.getElementById('adContainer').style.display = 'block';
-      document.body.style.overflow = 'hidden';
+      closePopup(); // 팝업을 닫음
+      document.getElementById('adContainer').style.display = 'block'; // 광고 컨테이너 표시
+      document.body.style.overflow = 'hidden'; // 스크롤 비활성화
 
+      // 광고 송출 코드 실행
       (adsbygoogle = window.adsbygoogle || []).push({});
 
+      // 5초 카운터 후 닫기 버튼 활성화
       let counter = 5;
       let adCounter = document.getElementById('adCounter');
       let closeButton = document.querySelector('.close-btn');
-      closeButton.style.display = 'none';
+      closeButton.style.display = 'none'; // 초기에는 닫기 버튼 숨김
 
       let countdown = setInterval(function() {
           counter--;
@@ -252,26 +240,30 @@ layout: default
           if (counter <= 0) {
               clearInterval(countdown);
               adCounter.textContent = "광고를 닫을 수 있습니다.";
-              closeButton.style.display = 'inline';
+              closeButton.style.display = 'inline'; // 닫기 버튼 표시
           }
       }, 1000);
   }
 
   function closeAd() {
-      document.getElementById('adContainer').style.display = 'none';
-      document.body.style.overflow = '';
+      document.getElementById('adContainer').style.display = 'none'; // 광고 컨테이너 숨김
+      document.body.style.overflow = ''; // 스크롤 활성화
       alert('광고 시청이 완료되었습니다.');
+
+      // 클릭 횟수 증가
       incrementClickCount();
   }
 
   function incrementClickCount() {
-      let currentDate = new Date().toISOString().split('T')[0];
+      let currentDate = new Date().toISOString().split('T')[0]; // 현재 날짜 (YYYY-MM-DD)
       let clickData = JSON.parse(localStorage.getItem('clickData')) || { date: currentDate, count: 0 };
 
+      // 날짜가 변경되면 클릭 수를 초기화
       if (clickData.date !== currentDate) {
           clickData = { date: currentDate, count: 0 };
       }
 
+      // 클릭 횟수 증가 및 저장
       clickData.count++;
       localStorage.setItem('clickData', JSON.stringify(clickData));
   }
@@ -280,9 +272,11 @@ layout: default
       let currentDate = new Date().toISOString().split('T')[0];
       let clickData = JSON.parse(localStorage.getItem('clickData')) || { date: currentDate, count: 0 };
 
+      // 클릭 횟수가 2번 이상이면 팝업 표시하지 않음
       return clickData.count < 2;
   }
 </script>
+
 
 <!-- 광고 스크립트 -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
