--- a/_posts/상단 하단 광고.md
+++ b/_posts/상단 하단 광고.md
@@ -30,6 +30,18 @@ layout: default
     <div class="page__inner-wrap">
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
+          <!-- 제목 상단에 광고 삽입 (크기 축소) -->
+          <div class="in-content-ad">
+              <ins class="adsbygoogle"
+                   style="display:block; margin: auto; width: 80%; text-align: center; padding: 10px 0;"
+                   data-ad-client="ca-pub-9374368296307755"
+                   data-ad-slot="9952845435"
+                   data-ad-format="auto"
+                   data-full-width-responsive="true"></ins>
+              <script>
+                  (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
+          </div>
           {% if page.title -%}
           <h1 id="page-title" class="page__title" itemprop="headline">
             <a href="{{ page.url | absolute_url }}" itemprop="url">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</a>
@@ -49,18 +61,7 @@ layout: default
           </aside>
         {% endif %}
         {{ content }}
-        <!-- 본문에 광고 삽입 -->
-        <div class="in-content-ad">
-            <ins class="adsbygoogle"
-                 style="display:block; margin: auto; text-align: center; padding: 20px 0;"
-                 data-ad-client="ca-pub-9374368296307755"
-                 data-ad-slot="9952845435"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-        </div>
+        
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
@@ -87,6 +88,9 @@ layout: default
     {% include page__related.html posts=site.posts %}
   {% endif %}
 </div>
+
+
+
 
 <html lang="en">
 <head>
@@ -175,6 +179,44 @@ layout: default
     </style>
 </head>
 <body>
+  <!-- 본문 하단에 고정된 앵커 광고 -->
+  <div class="anchor-ad">
+    <ins class="adsbygoogle"
+         style="display:block; width: 100%; height: 10px; margin: auto; text-align: center;"
+         style="display:block; width: 100%; height: px; margin: auto; text-align: center;"
+         data-ad-client="ca-pub-9374368296307755"
+         data-ad-slot="9952845435"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+</div>
+
+<style>
+    .anchor-ad {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 5px; /* 광고 높이 설정 */
+        height: 5px; /* 광고 높이 설정 */
+        background-color: #fff;
+        z-index: 1002; /* 다른 요소 위에 표시 */
+        box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    /* 필요 시 화면 높이를 광고 높이만큼 조정 */
+    body {
+        padding-bottom: 5px; /* 광고 높이만큼 본문 하단 여백 추가 */
+    }
+</style>
+
+<!-- 기존의 본문 내용 -->
+<div id="main" role="main">
+    <!-- 콘텐츠 영역 -->
+</div>  
 
 <div id="overlay" onclick="closePopup()"></div>
 
@@ -199,49 +241,80 @@ layout: default
 </div>
 
 <script>
-    window.onload = function() {
-        showPopup();
-    };
+  window.onload = function() {
+      if (!shouldShowPopup()) return;
+      showPopup();
+  };
 
-    function showPopup() {
-        document.getElementById('overlay').style.display = 'block';
-        document.getElementById('popup').style.display = 'block';
-        document.body.style.overflow = 'hidden'; // 스크롤 비활성화
-    }
+  function showPopup() {
+      document.getElementById('overlay').style.display = 'block';
+      document.getElementById('popup').style.display = 'block';
+      document.body.style.overflow = 'hidden'; // 스크롤 비활성화
+  }
 
-    function closePopup() {
-        document.getElementById('overlay').style.display = 'none';
-        document.getElementById('popup').style.display = 'none';
-        document.body.style.overflow = ''; // 스크롤 활성화
-    }
+  function closePopup() {
+      document.getElementById('overlay').style.display = 'none';
+      document.getElementById('popup').style.display = 'none';
+      document.body.style.overflow = ''; // 스크롤 활성화
+  }
 
-    function showAd() {
-        closePopup(); // 팝업을 닫음
-        document.getElementById('adContainer').style.display = 'block'; // 광고 컨테이너 표시
-        document.body.style.overflow = 'hidden'; // 스크롤 비활성화
+  function showAd() {
+      closePopup(); // 팝업을 닫음
+      document.getElementById('adContainer').style.display = 'block'; // 광고 컨테이너 표시
+      document.body.style.overflow = 'hidden'; // 스크롤 비활성화
 
-        // 광고 송출 코드 실행
-        (adsbygoogle = window.adsbygoogle || []).push({});
+      // 광고 송출 코드 실행
+      (adsbygoogle = window.adsbygoogle || []).push({});
 
-        // 5초 카운터 후 닫기 버튼 활성화
-        let counter = 5;
-        let adCounter = document.getElementById('adCounter');
-        let countdown = setInterval(function() {
-            counter--;
-            adCounter.textContent = `광고가 ${counter}초 후에 닫힐 수 있습니다...`;
-            if (counter <= 0) {
-                clearInterval(countdown);
-                adCounter.textContent = "광고를 닫을 수 있습니다.";
-            }
-        }, 1000);
-    }
+      // 5초 카운터 후 닫기 버튼 활성화
+      let counter = 5;
+      let adCounter = document.getElementById('adCounter');
+      let closeButton = document.querySelector('.close-btn');
+      closeButton.style.display = 'none'; // 초기에는 닫기 버튼 숨김
 
-    function closeAd() {
-        document.getElementById('adContainer').style.display = 'none'; // 광고 컨테이너 숨김
-        document.body.style.overflow = ''; // 스크롤 활성화
-        alert('광고 시청이 완료되었습니다.');
-    }
+      let countdown = setInterval(function() {
+          counter--;
+          adCounter.textContent = `광고가 ${counter}초 후에 닫힐 수 있습니다...`;
+          if (counter <= 0) {
+              clearInterval(countdown);
+              adCounter.textContent = "광고를 닫을 수 있습니다.";
+              closeButton.style.display = 'inline'; // 닫기 버튼 표시
+          }
+      }, 1000);
+  }
+
+  function closeAd() {
+      document.getElementById('adContainer').style.display = 'none'; // 광고 컨테이너 숨김
+      document.body.style.overflow = ''; // 스크롤 활성화
+      alert('광고 시청이 완료되었습니다.');
+
+      // 클릭 횟수 증가
+      incrementClickCount();
+  }
+
+  function incrementClickCount() {
+      let currentDate = new Date().toISOString().split('T')[0]; // 현재 날짜 (YYYY-MM-DD)
+      let clickData = JSON.parse(localStorage.getItem('clickData')) || { date: currentDate, count: 0 };
+
+      // 날짜가 변경되면 클릭 수를 초기화
+      if (clickData.date !== currentDate) {
+          clickData = { date: currentDate, count: 0 };
+      }
+
+      // 클릭 횟수 증가 및 저장
+      clickData.count++;
+      localStorage.setItem('clickData', JSON.stringify(clickData));
+  }
+
+  function shouldShowPopup() {
+      let currentDate = new Date().toISOString().split('T')[0];
+      let clickData = JSON.parse(localStorage.getItem('clickData')) || { date: currentDate, count: 0 };
+
+      // 클릭 횟수가 2번 이상이면 팝업 표시하지 않음
+      return clickData.count < 2;
+  }
 </script>
+
 
 <!-- 광고 스크립트 -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
