--- a/_posts/하단 앵커 광고.md
+++ b/_posts/하단 앵커 광고.md
@@ -1,4 +1,3 @@
-@ -1,306 +1,346 @@
 ---
 layout: default
 ---
@@ -31,6 +30,18 @@ layout: default
     <div class="page__inner-wrap">
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
+          <!-- 제목 상단에 광고 삽입 (크기 축소) -->
+          <div class="in-content-ad">
+              <ins class="adsbygoogle"
+                   style="display:block; margin: auto; width: 80%; text-align: center; padding: 10px 0;"
+                   data-ad-client="ca-pub-9374368296307755"
+                   data-ad-slot="9952845435"
+                   data-ad-format="auto"
+                   data-full-width-responsive="true"></ins>
+              <script>
+                  (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
+          </div>
           {% if page.title -%}
           <h1 id="page-title" class="page__title" itemprop="headline">
             <a href="{{ page.url | absolute_url }}" itemprop="url">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</a>
@@ -50,7 +61,7 @@ layout: default
           </aside>
         {% endif %}
         {{ content }}
-
+        
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
@@ -77,6 +88,9 @@ layout: default
     {% include page__related.html posts=site.posts %}
   {% endif %}
 </div>
+
+
+
 
 <html lang="en">
 <head>
@@ -163,48 +177,79 @@ layout: default
             background-color: #0056b3;
         }
     </style>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>상단 및 하단 고정 광고 예제</title>
+
+    <!-- Google AdSense 스크립트 -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
+            crossorigin="anonymous"></script>
+
+    <style>
+        .anchor-ad-top {
+            position: fixed;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%) scale(0.5); /* 중앙 정렬 및 50% 크기로 축소 */
+            transform-origin: top center;
+            width: 728px;
+            height: 90px;
+            background-color: #fff;
+            z-index: 1002;
+            box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .anchor-ad-bottom {
+            position: fixed;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%) scale(0.5); /* 중앙 정렬 및 50% 크기로 축소 */
+            transform-origin: bottom center;
+            width: 728px;
+            height: 90px;
+            background-color: #fff;
+            z-index: 1002;
+            box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        /* 광고 크기에 맞춘 상단 및 하단 여백 */
+        body {
+            padding-top: 45px; /* 상단 고정 광고에 맞춘 여백 */
+            padding-bottom: 45px; /* 하단 고정 광고에 맞춘 여백 */
+        }
+    </style>
 </head>
-
 <body>
-  <!-- 본문 하단에 고정된 앵커 광고 -->
-  <div class="anchor-ad">
-      <ins class="adsbygoogle"
-           style="display:block; width: 100%; height: 10px; margin: auto; text-align: center;"
-           style="display:block; width: 100%; height: px; margin: auto; text-align: center;"
-           data-ad-client="ca-pub-9374368296307755"
-           data-ad-slot="9952845435"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-  </div>
 
-  <style>
-      .anchor-ad {
-          position: fixed;
-          bottom: 0;
-          left: 0;
-          width: 100%;
-          height: 10px; /* 광고 높이 설정 */
-          height: 5px; /* 광고 높이 설정 */
-          background-color: #fff;
-          z-index: 1002; /* 다른 요소 위에 표시 */
-          box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
-      }
+<!-- 상단 고정 광고 -->
+<div class="anchor-ad-top">
+    <ins class="adsbygoogle"
+         style="display:inline-block;width:728px;height:90px"
+         data-ad-client="ca-pub-9374368296307755"
+         data-ad-slot="3603389079"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+</div>
 
-      /* 필요 시 화면 높이를 광고 높이만큼 조정 */
-      body {
-          padding-bottom: 15px; /* 광고 높이만큼 본문 하단 여백 추가 */
-      }
-  </style>
+<!-- 본문 콘텐츠 -->
+<div id="main" role="main">
+    <h1>메인 콘텐츠 시작</h1>
+    <p>여기에 메인 콘텐츠가 표시됩니다.</p>
+</div>
 
-  <!-- 기존의 본문 내용 -->
-  <div id="main" role="main">
-      <!-- 콘텐츠 영역 -->
-  </div>
-</body>
+<!-- 하단 고정 광고 -->
+<div class="anchor-ad-bottom">
+    <ins class="adsbygoogle"
+         style="display:inline-block;width:728px;height:90px"
+         data-ad-client="ca-pub-9374368296307755"
+         data-ad-slot="4202989029"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+</div>
+
 
 <div id="overlay" onclick="closePopup()"></div>
 
