--- a/_posts/최종r1 11.07.md
+++ b/_posts/최종r1 11.07.md
@@ -266,7 +266,6 @@ layout: default
 </div>
 <div id="adContainer">
     <div class="ad-header">
-       <span id="adCounter">광고가 5초 후에 닫힐 수 있습니다...</span>
        <button class="close-btn" onclick="closeAd()">&times;</button>
     </div>
     <h2>광고</h2>
@@ -276,6 +275,8 @@ layout: default
          data-ad-slot="9952845435"
          data-ad-format="auto"
          data-full-width-responsive="true"></ins>
+    <!-- 광고 하단에 카운터 표시 -->
+    <div id="adCounter" style="text-align: center; margin-top: 10px;">광고가 7초 후에 닫힐 수 있습니다...</div>
 </div>
 
 <script>
@@ -303,7 +304,7 @@ function showAd() {
 
     (adsbygoogle = window.adsbygoogle || []).push({});
 
-    let counter = 5;
+    let counter = 7;
     let adCounter = document.getElementById('adCounter');
     let closeButton = document.querySelector('.close-btn');
     closeButton.style.display = 'none';
@@ -318,6 +319,7 @@ function showAd() {
         }
     }, 1000);
 }
+
 
 function closeAd() {
     document.getElementById('adContainer').style.display = 'none';
