--- a/_posts/2024-10-04-돼지고기_고구마_요리.md
+++ b/_posts/2024-10-04-돼지고기_고구마_요리.md
@@ -1,3 +1,8 @@
+---
+layout: posts
+title: "감자와 라면 조립법 1: 감자 라면 전골"
+---
+
 # 돼지고기 고구마 요리 5가지
 
 안녕하세요! 오늘은 **돼지고기**와 **고구마**를 활용한 다양한 요리법을 소개해 드리겠습니다. 달콤한 고구마와 고소한 돼지고기가 만나 한층 더 맛있는 요리를 만들어낼 수 있습니다. 그럼 함께 알아보도록 하겠습니다!
