--- a/_posts/2024-10-07-경상남도 10월 아이랑 놀기 좋은 여행지 10선.md
+++ b/_posts/2024-10-07-경상남도 10월 아이랑 놀기 좋은 여행지 10선.md
@@ -1,3 +1,8 @@
+---
+layout: posts
+title: "경상남도 10월추천 여행지"
+---
+
 # 경상남도 10월 아이랑 놀기 좋은 여행지 10선
 
 경상남도는 아이들과 함께 즐길 수 있는 다양한 관광지와 체험 프로그램이 가득한 지역입니다. 10월의 맑고 쾌적한 날씨 속에서 아이들과 함께 즐길 수 있는 **경상남도 추천 여행지 10선**을 소개합니다.
