--- a/_posts/2024-10-07-전라남도 10월 아이랑 놀기 좋은 여행지 10선.md
+++ b/_posts/2024-10-07-전라남도 10월 아이랑 놀기 좋은 여행지 10선.md
@@ -1,5 +1,8 @@
-
 ---
+layout: posts
+title: "전라남도 10월추천 여행지"
+---
+
 
 ## 1. 여수 아쿠아플라넷
 **아쿠아플라넷**은 다양한 해양 생물과 함께 수중 생태계를 체험할 수 있는 곳입니다. 아이들은 물속에서 살아가는 다양한 생물을 가까이에서 관찰하며 흥미로운 시간을 보낼 수 있습니다. 매일 열리는 다양한 공연도 놓치지 마세요!
