--- a/_posts/2024-10-08-강원도 10월 아이랑 놀기 좋은 여행지 10선.md
+++ b/_posts/2024-10-08-강원도 10월 아이랑 놀기 좋은 여행지 10선.md
@@ -1,4 +1,7 @@
-
+---
+layout: posts
+title: "강원도 10월추천 여행지"
+---
 
 강원도는 청정 자연과 아름다운 풍경이 가득한 지역으로, 가족 단위 여행에 적합한 곳이 많습니다. 10월의 맑고 선선한 날씨 속에서 아이들과 함께 즐길 수 있는 **강원도 추천 여행지 10선**을 소개합니다.
 
