--- a/_posts/2024-10-04-홍게라면.md
+++ b/_posts/2024-10-04-홍게라면.md
@@ -1,3 +1,8 @@
+---
+layout: posts
+title: "홍게 라면을 활용한 5가지 조리법"
+---
+
 # 홍게 라면을 활용한 5가지 조리법
 
 안녕하세요! 오늘은 **홍게**와 **라면**을 조합한 다양한 조리법을 소개해 드리겠습니다. 홍게의 풍미가 라면과 어우러져 특별한 맛을 선사하는 이 레시피들을 통해, 집에서도 간편하게 해산물 요리를 즐길 수 있습니다. 그럼 시작해볼까요?
