--- a/_posts/2024-10-07-전라북도 10월 아이랑 놀기 좋은 여행지 10선.md
+++ b/_posts/2024-10-07-전라북도 10월 아이랑 놀기 좋은 여행지 10선.md
@@ -1,4 +1,7 @@
-
+---
+layout: posts
+title: "전라북도 10월추천 여행지"
+---
 
 전라북도는 가족 단위 여행객을 위한 다양한 관광명소와 체험 프로그램이 풍부한 지역입니다. 10월의 청명한 날씨 속에서 아이들과 함께 즐길 수 있는 **전라북도 추천 여행지 10선**을 소개합니다.
 
