--- a/_posts/2024-10-07-경상북도 10월 아이랑 놀기 좋은 여행지 10선.md
+++ b/_posts/2024-10-07-경상북도 10월 아이랑 놀기 좋은 여행지 10선.md
@@ -1,4 +1,8 @@
+---
+layout: single
+---
 
+{% raw %}
 
 ## 1. 경주 에밀레전시
 **에밀레전시**는 경주에 위치한 테마파크로, 다양한 놀이기구와 전시가 마련되어 있습니다. 아이들이 즐길 수 있는 다양한 체험과 프로그램이 있어 가족이 함께 즐기기에 좋은 장소입니다.
@@ -33,3 +37,4 @@
 ---
 
 경상북도는 아이와 함께할 수 있는 다양한 즐길 거리가 가득합니다. 10월의 맑고 선선한 날씨 속에서 가족과 함께 특별한 추억을 만들어보세요. 위의 추천 여행지는 아이들이 좋아할 만한 다양한 체험과 즐길 거리를 제공하는 명소들로, 소중한 시간을 선사할 것입니다.
+{% raw %}
