--- a/_posts/2024-10-08-경기도 10월 아이랑 놀기 좋은 여행지 10선 copy.md
+++ b/_posts/2024-10-08-경기도 10월 아이랑 놀기 좋은 여행지 10선 copy.md
@@ -1,4 +1,8 @@
+---
+layout: single
+---
 
+{% raw %}
 
 경기도는 수도권 내에 다양한 자연과 문화 체험이 가능한 여행지가 많은 지역입니다. 10월의 선선한 날씨 속에서 아이들과 함께 즐길 수 있는 **경기도 추천 여행지 10선**을 소개합니다.
 
@@ -37,3 +41,4 @@
 ---
 
 경기도는 아이와 함께할 수 있는 다양한 즐길 거리가 풍부합니다. 10월의 맑고 시원한 날씨 속에서 가족과 함께 특별한 추억을 만들어보세요. 위의 추천 여행지는 아이들이 좋아할 만한 다양한 체험과 즐길 거리를 제공하는 명소들로, 소중한 시간을 선사할 것입니다.
+{% raw %}
